--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ edition = "2021"
 clap = { version = "4.4.12", features = ["derive"] }
 env_logger = "0.11.3"
 log = "0.4.20"
-pixels = "0.13.0"
 rand = "0.8.5"
 thiserror = "1.0.53"
-winit = "0.28.7"                                     # 0.30.0 is AWFUL
-winit_input_helper = "0.14.1"                        # DO NOT CHANGE THIS ONE EITHER
+minifb = "0.27.0"
+crossbeam-channel = "0.5.13"
